--- a/style.css
+++ b/style.css
@@ -58,6 +58,13 @@ body{
             background-color: white;
             margin-top: 30px;
         }
+
+        .ciculoAnimacaoGrande{
+
+            animation-name: pular;
+            animation-duration: 0.3s;
+            animation-iteration-count: 3;
+        }
             .ciculoApresentacao__img{
                 background-color: cornflowerblue;
                 border-radius: 50%;
@@ -74,8 +81,11 @@ body{
             max-width: 100px;
             cursor: pointer;
         }
-        .ciculoApresentacao--pequeno:hover{
+        /* #teste:checked{
             border: 1px solid red;
+        } */
+        .ativado{
+            background-color: rgb(236, 78, 78);
         }
     
     #jogar{
@@ -127,23 +137,34 @@ body{
             width: 90px;
             text-align: center;
         }
-        #jogar:active{
-            background-color: green;
-
+        .placar--animado{
+            animation-name: colorir;
+            animation-duration: 1.5s;
+            animation-delay: 0.8s;
+            animation-iteration-count: 1;
         }
-
-        .ativado{
-            animation: colorir 3s ease 1;
-        }
+        
 
         @keyframes colorir {
             0%{
                 background-color: rgb(247, 144, 60);
             }
             50%{
-                background-color: green;
+                background-color: rgb(26, 190, 26);
             }
             100%{
                 background-color: rgb(247, 144, 60);
+            }
+        }
+
+        @keyframes pular {
+            0%{
+                transform: translateY(0);
+            }
+            50%{
+                transform: translateY(15px);
+            }
+            100%{
+                transform: translateY(0);
             }
         }
